--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Ardan Juniar</h1>
-      <p>Saya <span class="typed" data-typed-items="Web Programmer, Freelancer"></span></p>
+      <p><span class="typed" data-typed-items="Web Programmer, Freelancer"></span></p>
     </div>
   </section><!-- End Hero -->
 
